--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Lumina | Modern Tech Blog</title>
+    <title>Bigyann | AI Powered Tech and Science</title>
   <script type="importmap">
 {
   "imports": {
