--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
   }
 }
 </script>
+<script src="https://js.puter.com/v2/"></script>
 </head>
   <body class="bg-gray-50 text-gray-900 dark:bg-gray-900 dark:text-gray-100 transition-colors duration-200">
     <div id="root"></div>
