fix: Resolve @vercel/node TS error and update sitemap error handling

--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
       "@context": "https://schema.org",
       "@type": "WebSite",
       "name": "Bigyann",
-      "url": "https://www.bigyann.com.np/",
+      "url": "https://bigyann.com.np/",
       "potentialAction": {
         "@type": "SearchAction",
-        "target": "https://www.bigyann.com.np/search?q={search_term_string}",
+        "target": "https://bigyann.com.np/search?q={search_term_string}",
         "query-input": "required name=search_term_string"
       }
     }
