fix: Resolve @vercel/node TS error and update sitemap error handling

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Bigyann is a premier platform for science, technology, and digital insights in Nepal. Stay updated with the latest in tech, AI, and modern web experiences." />
     
     <meta name="robots" content="index, follow" />
-    <meta name="author" content="Bigyann Team" />
+    <meta name="author" content="Bigyann" />
     
     <meta property="og:site_name" content="Bigyann" />
     <meta property="og:type" content="website" />
