fix: Resolve @vercel/node TS error and update sitemap error handling

--- a/index.html
+++ b/index.html
@@ -4,14 +4,16 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>Bigyann - Exploring Science, Tech & Innovation</title> 
-    <meta name="description" content="Bigyann is a premier platform for science, technology, and digital insights in Nepal. Stay updated with the latest in tech, AI, and modern web experiences." />
+    <title data-rh="true">Bigyann - Exploring Science, Tech & Innovation</title> 
+    <meta data-rh="true" name="description" content="Bigyann is a premier platform for science, technology, and digital insights in Nepal. Stay updated with the latest in tech, AI, and modern web experiences." />
     
-    <meta name="robots" content="index, follow" />
     <meta name="author" content="Bigyann" />
     
+    <link data-rh="true" rel="canonical" href="https://bigyann.com.np/" />
+
     <meta property="og:site_name" content="Bigyann" />
     <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://bigyann.com.np/" />
     <meta property="og:image" content="https://bigyann.com.np/og-image.png" />
 
     <link rel="sitemap" type="application/xml" href="/sitemap.xml" />
